package aegisthus;

option java_package = "com.netflix.aegisthus.message";
option java_outer_classname = "AegisthusProtos";

message Column {
  required bytes rowKey = 1;
  required int64 deletedAt = 2;
  optional ColumnType columnType = 3 [default = NORMAL];
  required bytes columnName = 4;
  optional bytes value = 5;
  optional int64 timestamp = 6;
  optional int64 ttl = 7;
  

  enum ColumnType {
      NORMAL = 0;
      DELETED = 1;
      EXPIRING = 2;
      COUNTER = 3;
  }
}

message Row {
  required bytes rowKey = 1;
  required int64 deletedAt = 2;
  repeated Column column = 3;
}

